--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "morgan": "^1.8.1",
     "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.2",
+    "socket.io-client": "^1.7.3",
+    "socketio": "^1.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
